Fix z-index

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -156,6 +156,7 @@ body {
     bottom: 0;
     left: 0;
     right: 0;
+    z-index: 99999;
 
     &:hover {
       display: table;
@@ -176,4 +177,10 @@ body {
       background-color: rgba(hue(grey, 90), 0.8);
     }
   }
+}
+
+// Fix for editing
+
+.kvasir .m-banner__link-wrap:hover:after {
+  display: none;
 }
